# youtube-irc-bot

./: .gitignore  COPYING  Cargo.toml  example.config.toml
src/: config.rs  duration.rs  error.rs  http.rs  lib.rs  macros.rs  main.rs  message.rs
