[package]
name = "youtube-irc-bot"
version = "2.1.0"
repository = "https://github.com/video-archivist/youtube-irc-bot"
license = "ISC"
edition = "2018"

[dependencies]
irc = "0.13.6"
tokio-core = "0.1.17"
structopt = "0.3.3"
serde = "1.0.101"
serde_derive = "1.0.101"
itertools = "0.8.0"
regex = "1.3.1"
once_cell = "1.2.0"
toml = "0.5.3"
directories = "2.0.2"
dirs = "2.0.2"
snafu = "0.5.0"
bytecount = "0.6.0"
phf = { git = "https://github.com/sfackler/rust-phf", rev = "0d0082178568036736bb6d51cb91f95ca5a616c3", features = ["macros"] }
