[package]
name = "youtube-irc-bot"
version = "2.2.0"
repository = "https://github.com/video-archivist/youtube-irc-bot"
license = "ISC"
edition = "2018"

[dependencies]
irc = "0.13.6"
tokio-core = "0.1.17"
structopt = "0.3.4"
serde = "1.0.102"
serde_derive = "1.0.102"
itertools = "0.8.1"
regex = "1.3.1"
once_cell = "1.2.0"
toml = "0.5.5"
directories = "2.0.2"
dirs = "2.0.2"
snafu = "0.6.0"
bytecount = "0.6.0"
phf = { version = "0.8.0", features = ["macros"] }
